--- a/test/css/style.css
+++ b/test/css/style.css
@@ -7481,3 +7481,49 @@ img.mfp-img {
 		padding: 5% 0% 0px 0%;
 	}
 }
+
+/*****************************Header Login Menu**********************/
+.login.nav {
+    left:50%;
+    margin-left:-150px;
+    top:50px;
+    position:absolute;
+}
+.login.nav>li>a:hover, .login.nav>li>a:focus, .login.nav .open>a, .login.nav .open>a:hover, .login.nav .open>a:focus {
+    background:#fff;
+}
+.login.nav .dropdown {
+    background:#fff;
+    border:1px solid #ccc;
+    border-radius:4px;
+    width:300px;    
+}
+.login.nav .dropdown-menu>li>a {
+    color:#428bca;
+}
+.login.nav .dropdown ul.dropdown-menu {
+    border-radius:4px;
+    box-shadow:none;
+    margin-top:20px;
+    width:300px;
+}
+.login.nav .dropdown ul.dropdown-menu:before {
+    content: "";
+    border-bottom: 10px solid #fff;
+    border-right: 10px solid transparent;
+    border-left: 10px solid transparent;
+    position: absolute;
+    top: -10px;
+    right: 16px;
+    z-index: 10;
+}
+.login.nav .dropdown ul.dropdown-menu:after {
+    content: "";
+    border-bottom: 12px solid #ccc;
+    border-right: 12px solid transparent;
+    border-left: 12px solid transparent;
+    position: absolute;
+    top: -12px;
+    right: 14px;
+    z-index: 9;
+}
