--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -32,7 +32,7 @@
 	h2 {font-size: 7vw; line-height: 8vw;}
 	.ui-inner {width: 96%; max-width: 144rem;}
 	.e-home-banner ul{ display:none;}
-	.e-home-content { width: 45vw; margin: 75px 0 0 30px;}
+	.e-home-content { width: 90%; margin: 75px 0 0 30px;}
 	.e-home-content h1{font-size: 6vw;line-height: 7vw;}
 	.e-home-content span{ margin: 30px 0; line-height: 5vw; font-size: 4vw;}
 	.e-home-content a{font-size: 13px; width: 155px;height: 38px; line-height: 38px;}
